crates/swc_ecma_parser/tests/jsx/errors/attributes-in-fragment/input.js.stderr
error: Unexpected token `=`. Expected jsx identifier
 --> $DIR/tests/jsx/errors/attributes-in-fragment/input.js:1:6
  |
1 | < key="nope"></>
  |      ^

